# the-flask-mega-tutorial

./: README.md  app.db  config.py  pyproject.toml
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: 404.html  500.html  _post.html  base.html  edit_profile.html  index.html  login.html  user.html
logs/: microblog.log.1  microblog.log.2  microblog.log.3  microblog.log.4  microblog.log.5  microblog.log.6
migrations/versions/: 083b26f9d403_followers.py  5c5d61715d1b_users_ans_posts_tables.py  8a42028e31ca_new_fields_in_user_model.py
