[tool.poetry]
name = "microblog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
flask-wtf = "^1.0.1"
flask-sqlalchemy = "^3.0.2"
flask-migrate = "^4.0.0"
flask-login = "^0.6.2"
email-validator = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
